--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "sass": "^1.49.7"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.0.0",
